--- a/index.html
+++ b/index.html
@@ -31,9 +31,181 @@
       margin-bottom: 20px;
       color: var(--accent-color);
     }
+    #date {
+      font-size: 0.8em;
+      margin-left: 16px;
+      color: #e0e0e0;
+    }
     button {
       background-color: var(--button-bg);
       border: none;
+      color: var(--accent-color);
+      padding: 8px 16px;
+      border-radius: 8px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: background 0.2s;
+    }
+    button:hover { background-color: var(--button-hover); }
+    .section {
+      background-color: var(--card-color);
+      padding: 15px;
+      margin-bottom: 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.4);
+    }
+    .section h2 {
+      margin-top: 0;
+      font-family: 'Orbitron', sans-serif;
+      font-size: 1.5em;
+      color: var(--accent-color);
+    }
+    .logs {
+      font-family: 'Space Mono', monospace;
+      font-size: 0.9em;
+      color: #aaa;
+      background-color: #222;
+      padding: 10px;
+      border-radius: 8px;
+      max-height: 200px;
+      overflow-y: auto;
+      white-space: pre-line;
+    }
+    .error { color: #f44336; font-weight: bold; }
+    a { color: var(--accent-color); text-decoration: underline; }
+    @media (max-width: 600px) {
+      h1 { font-size: 1.5em; }
+      .section { padding: 10px; }
+      button { padding: 6px 12px; font-size: 0.9em; }
+      .section h2 { font-size: 1.2em; }
+    }
+  </style>
+</head>
+<body>
+<h1>
+  📬 Ma Gazette du Jour
+  <span id="date"></span>
+  <button onclick="manualRefresh()">🔄 Rafraîchir</button>
+</h1>
+
+<div id="gazette">Chargement...</div>
+<div id="logs" class="logs"></div>
+
+<script>
+const MISTRAL_API_KEY = "4TkJgrGZ19tSwyrRPqYUqgAZh4ttCKmc";
+const weatherCodes = {0:"Ciel clair",2:"Partiellement nuageux",3:"Couvert",45:"Brouillard",61:"Pluie faible",95:"Orages"};
+
+function updateDate() {
+  const options = { weekday: 'long', day: 'numeric', month: 'long', year: 'numeric' };
+  const today = new Date();
+  document.getElementById("date").innerText = today.toLocaleDateString("fr-FR", options);
+}
+
+function log(msg){document.getElementById("logs").innerText+=msg+"\n";console.log(msg);}
+function isToday(dateString){const today=new Date();const saved=new Date(dateString);return today.toDateString()===saved.toDateString();}
+
+async function getLocation(){
+  log("📍 Récupération de la position...");
+  return new Promise(resolve=>{
+    let resolved=false;
+    const timer=setTimeout(()=>{if(!resolved){resolved=true;log("⚠️ Timeout → fallback Paris");resolve({lat:48.8566,lon:2.3522});}},5000);
+    navigator.geolocation.getCurrentPosition(
+      pos=>{if(!resolved){resolved=true;clearTimeout(timer);log("✅ Position récupérée");resolve({lat:pos.coords.latitude,lon:pos.coords.longitude});}},
+      ()=>{if(!resolved){resolved=true;clearTimeout(timer);log("⚠️ Position refusée → fallback Paris");resolve({lat:48.8566,lon:2.3522});}}
+    );
+  });
+}
+
+// Météo actuelle + prévisions journée
+async function getWeather(lat,lon){
+  log("⛅ Récupération de la météo...");
+  try{
+    const res = await fetch(`https://api.open-meteo.com/v1/forecast?latitude=${lat}&longitude=${lon}&current_weather=true&hourly=temperature_2m,weathercode&forecast_days=1`);
+    const data = await res.json();
+    log("✅ Météo récupérée");
+    return data;
+  }catch(e){log("❌ Erreur météo"); return null;}
+}
+
+async function getMistralNews(){
+  log("📰 Récupération des articles (Mistral)...");
+  try{
+    if(!MISTRAL_API_KEY) throw "⚠️ Clé API manquante";
+    const res = await fetch("https://api.mistral.ai/v1/chat/completions",{
+      method:"POST",
+      headers:{"Content-Type":"application/json","Authorization":"Bearer "+MISTRAL_API_KEY},
+      body:JSON.stringify({
+        model:"mistral-medium",
+        messages:[{role:"user",content:`Pour chaque article, fais une recherche d'actualité sur le web aujourd'hui avant de rédiger. Génère une gazette tech courte en français. Sujets : korben, Raspberry Pi, ricing Linux, UXN, nouveaux PC/Mac, cyberdecks. Style clair et concis, avec 3-5 articles, et cite les sources à chaque fois.`}]
+      }),
+    });
+    if(!res.ok) throw "Erreur API Mistral: "+await res.text();
+    const data = await res.json();
+    log("✅ Articles récupérés");
+    return data.choices[0].message.content;
+  }catch(e){log("❌ Erreur articles : "+e); return "❌ Pas d’articles disponibles aujourd’hui.";}
+}
+
+async function generateGazette(){
+  try{
+    updateDate();
+    document.getElementById("gazette").innerHTML="⏳ Génération en cours...";
+    document.getElementById("logs").innerText="";
+    const loc = await getLocation();
+    const weather = await getWeather(loc.lat, loc.lon);
+    const news = await getMistralNews();
+
+    // Météo actuelle + prévisions
+    let meteoHtml = `<div class="section"><h2>Météo</h2>❌ Indisponible</div>`;
+    if(weather && weather.current_weather && weather.hourly && weather.hourly.time) {
+      const current = weather.current_weather;
+      const description = weatherCodes[current.weathercode] || "Météo inconnue";
+      meteoHtml = `<div class="section"><h2>Météo</h2>
+        🌡️ ${current.temperature}°C<br>
+        💨 Vent: ${current.windspeed} km/h<br>
+        ⛅ ${description}<br>
+        ⏰ ${new Date(current.time).toLocaleTimeString("fr-FR")}<br>
+        <h3>Prévisions aujourd'hui :</h3>`;
+      for (let i=0; i<weather.hourly.time.length; i+=3) {
+        const hour = new Date(weather.hourly.time[i]).toLocaleTimeString("fr-FR",{hour:"2-digit"});
+        meteoHtml += `${hour}h : ${weather.hourly.temperature_2m[i]}°C, ${weatherCodes[weather.hourly.weathercode[i]] || "?"}<br>`;
+      }
+      meteoHtml += "</div>";
+    }
+
+    const formattedNews = marked.parse(news);
+    const content = `${meteoHtml}<div class="section"><h2>Articles</h2>${formattedNews}</div>`;
+    document.getElementById("gazette").innerHTML = content;
+    localStorage.setItem("gazette",JSON.stringify({date:new Date(),content}));
+    notifyUser("Nouvelle gazette disponible !");
+  }catch(e){document.getElementById("gazette").innerHTML=`<div class="error">${e}</div>`;}
+}
+
+function notifyUser(msg){
+  if(Notification.permission==="granted") new Notification("Gazette",{body:msg});
+}
+
+async function init(){
+  updateDate();
+  if(Notification.permission!=="granted") await Notification.requestPermission();
+  const saved = JSON.parse(localStorage.getItem("gazette")||"{}");
+  if(saved.date && isToday(saved.date)) document.getElementById("gazette").innerHTML = saved.content;
+  else await generateGazette();
+  setInterval(()=>{
+    const now=new Date();
+    if(now.getHours()===7 && now.getMinutes()===0) generateGazette();
+  },60000);
+}
+
+async function manualRefresh(){
+  await generateGazette();
+  alert("La gazette a été rafraîchie !");
+}
+
+init();
+</script>
+</body>
+</html>
       color: var(--accent-color);
       padding: 8px 16px;
       border-radius: 8px;
