--- a/toolbox.html
+++ b/toolbox.html
@@ -366,7 +366,7 @@
         const toolboxSections = {
             "📒 Productivité": [
                 {name: "MEGA Folder", url: "https://mega.nz/folder/krk0UCAS#Q6ySLCRELUqu_07202iiwQ"},
-                {name: "SimpleTabHtml", url: "https://traditionpixel.itch.io/simpletabhtml"},
+                {name: "SimpleTabHtml", url: "https://tahlasandale.github.io/MaGazette/SimpleTabHTML.html"},
                 {name: "Google Keep", url: "https://keep.google.com/"},
                 {name: "Google Drive", url: "https://drive.google.com/"}
             ],
