--- a/feedbacks.html
+++ b/feedbacks.html
@@ -286,7 +286,7 @@
   <h1>📊 Feedback du Soir</h1>
   <div class="panel">
     <div class="links">
-      <a href="https://tahlasandale.github.io/MaGazette/SimpleTabHTML.html" target="_blank">📝 Outil Notes</a>
+      <a href="https://tahlasandale.github.io/MaGazette/SimpleTabHTML.html" target="_blank">📝 SimpleTabHTML</a>
       <a href="https://chatgpt.com" target="_blank">🎤 GPT Vocal</a>
     </div>
     <form id="form" autocomplete="off">
@@ -301,4 +301,5 @@
   </div>
 </body>
 </html>
+
 
