--- a/feedbacks.html
+++ b/feedbacks.html
@@ -287,7 +287,7 @@
   <div class="panel">
     <div class="links">
       <a href="https://tahlasandale.github.io/MaGazette/SimpleTabHTML.html" target="_blank">📝 SimpleTabHTML</a>
-      <a href="https://chatgpt.com" target="_blank">🎤 GPT Vocal</a>
+      <a href="https://chatgpt.com/share/68b74c3d-d28c-8010-a231-e5fbde264f0d" target="_blank">🎤 GPT Vocal</a>
     </div>
     <form id="form" autocomplete="off">
       <label for="content">Ton feedback (texte) :</label>
@@ -301,5 +301,6 @@
   </div>
 </body>
 </html>
+
 
 
