--- a/toolbox.html
+++ b/toolbox.html
@@ -368,7 +368,7 @@
                 {name: "MEGA Folder", url: "https://mega.nz/folder/krk0UCAS#Q6ySLCRELUqu_07202iiwQ"},
                 {name: "SimpleTabHtml", url: "https://tahlasandale.github.io/MaGazette/SimpleTabHTML.html"},
                 {name: "Google Keep", url: "https://keep.google.com/"},
-                {name: "Google Drive", url: "https://drive.google.com/"}
+                {name: "Google Drive", url: "https://drive.google.com/drive/folders/13e5cZD_ms3C1_OmmbZdWZq9KOdsEBlDA"}
             ],
             "🎓 Études": [
                 {name: "Polytech Temp Site", url: "https://polytech-paris-saclay.jimdofree.com/"},
