--- a/index.html
+++ b/index.html
@@ -131,7 +131,17 @@ footer {
 <body>
   <header>
     <h1 class="nes-text is-primary">Retro Productivity Hub</h1>
-    <p class="nes-text">Tasks • Pomodoro • XP • Streaks • RSS News</p>
+    <p class="nes-text">
+  <a href="https://tahlasandale.github.io/MaGazette/dalyview.html" target="_blank">Daily View</a> • 
+  <a href="https://tahlasandale.github.io/MaGazette/meteo.html" target="_blank">Météo</a> • 
+  <a href="https://tahlasandale.github.io/MaGazette/rss.html" target="_blank">RSS</a> • 
+  <a href="https://tahlasandale.github.io/MaGazette/todo%20app.html" target="_blank">Todo</a> • 
+  <a href="https://tahlasandale.github.io/MaGazette/pomodoro.html" target="_blank">Pomodoro</a> • 
+  <a href="https://tahlasandale.github.io/MaGazette/toolbox.html" target="_blank">Toolbox</a> • 
+  <a href="https://tahlasandale.github.io/MaGazette/feedbacks.html" target="_blank">Feedbacks</a> • 
+  <a href="https://tahlasandale.github.io/MaGazette/SimpleTabHTML.html" target="_blank">SimpleTabHtml</a>
+</p>
+
   </header>
 
   <main>
