--- a/dalyview.html
+++ b/dalyview.html
@@ -113,7 +113,7 @@
     <iframe src="https://indify.co/widgets/live/calendar/EZcMbUI9HBUDk6IVjoMb" height="240"></iframe>
 </div>
 
-<a class="planning-button" href="https://intranet.polytech.universite-paris-saclay.fr/planning.html" target="_blank">Voir le planning Polytech</a>
+<a class="planning-button" href="https://ade-planning.polytech.universite-paris-saclay.fr/direct/?data=95e000515dff41bf090dab728096f2e573fcc9d06b8b96dc3d93d2cb352384cbd00d9c13ec0fd521cac74b6bf5c833e330bd1419659aefba2515ad45d7d6b2e60a177ea3fca78ebb8d09fcc527c2eb35c5c1eac4c431ea42a7b539b6ae09851fc8a517a39539834b65d418562645b25f6bed5e6629c39c1c84424e4705c803ab,1" target="_blank">Voir le planning Polytech</a>
 
 <script>
 const activities = [
@@ -185,3 +185,4 @@ toggleTimelineBtn.addEventListener('click', () => {
 </script>
 </body>
 </html>
+
