--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@ footer {
     </section>
 
     <section>
-      <p class="title">🍅 <a href="https://tahlasandale.github.io/MaGazette/pomodoro.html" target="_blank">Pomodoro</a></p>
-      <iframe src="https://tahlasandale.github.io/MaGazette/pomodoro.html"></iframe>
+      <p class="title">🍅 <a href="https://pomofocus.io/" target="_blank">Pomodoro</a></p>
+      <iframe src="https://pomofocus.io/"></iframe>
     </section>
 
     <section>
