--- a/rss.html
+++ b/rss.html
@@ -3,61 +3,39 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Actus Tech — Scroll Infini Amélioré</title>
+  <title>Actus Tech — Scroll Infini + Share + Images</title>
   <style>
     :root {
       --bg: #ffffff;
       --fg: #000000;
       --muted: #555555;
       --border: #000000;
-      --skeleton-bg: #e0e0e0;
     }
     html, body { height: 100%; margin: 0; padding: 0; overflow-x: hidden; }
-    body {
-      margin: 0; padding: 0;
-      background: var(--bg);
-      color: var(--fg);
-      font-family: "Courier New", Courier, monospace;
-      line-height: 1.5;
-    }
+    body { margin: 0; padding: 0; background: var(--bg); color: var(--fg); font-family: "Courier New", Courier, monospace; line-height: 1.5; }
     .container { max-width: 960px; margin: 0 auto; padding: 0 12px; }
 
     h1 { font-size: 28px; font-weight: 700; margin: 24px 0 16px 0; border-bottom: 2px dotted var(--border); padding-bottom: 6px; }
     .sub { margin: 0 0 24px 0; font-size: 14px; color: var(--muted); }
 
-    .controls {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 8px;
-      align-items: center;
-      margin-bottom: 18px;
-      border: 1px solid var(--border);
-      padding: 10px;
-      border-radius: 2px;
-      position: sticky;
-      top: 0;
-      background: var(--bg);
-      z-index: 100;
-      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
-    }
+    .controls { display: flex; flex-wrap: wrap; gap: 8px; align-items: center; margin-bottom: 18px; border: 1px solid var(--border); padding: 10px; border-radius: 2px; position: sticky; top: 0; background: var(--bg); z-index: 100; box-shadow: 0 2px 6px rgba(0,0,0,0.1); }
     .controls label { font-size: 14px; }
-
     button, select { border: 1px solid var(--border); background: var(--bg); color: var(--fg); padding: 8px 10px; border-radius: 2px; font-family: inherit; font-size: 14px; cursor: pointer; }
     button:hover { filter: invert(100%); }
     select:hover { background: #f5f5f5; }
 
-    .news { border: 1px solid var(--border); padding: 12px; margin-bottom: 10px; border-radius: 2px; background: var(--bg); opacity: 0; transform: translateY(20px); transition: all 0.3s ease; }
+    .news { border: 1px solid var(--border); padding: 12px; margin-bottom: 10px; border-radius: 2px; background: var(--bg); opacity: 0; transform: translateY(20px); transition: all 0.3s ease; display: flex; flex-direction: column; }
     .news.visible { opacity: 1; transform: translateY(0); }
     .news h2 { font-size: 16px; margin: 0 0 6px 0; }
     .news a { color: var(--fg); text-decoration: underline; text-underline-offset: 2px; }
     .news a:hover { background: #000; color: #fff; }
-    .meta { font-size: 12px; color: var(--muted); }
+    .meta { font-size: 12px; color: var(--muted); margin-bottom: 6px; }
+
+    .news img { max-width: 100%; height: auto; border-radius: 4px; margin-bottom: 8px; object-fit: cover; }
+    .share-button { margin-top: 8px; font-size: 12px; padding: 4px 6px; align-self: flex-start; }
 
     .cursor::after { content: "▌"; margin-left: 6px; animation: blink 1s steps(1,end) infinite; }
     @keyframes blink { 50% { opacity: 0; } }
-
-    .skeleton { height: 80px; background: var(--skeleton-bg); margin-bottom: 10px; border-radius: 2px; animation: pulse 1.2s infinite; }
-    @keyframes pulse { 0% { opacity: 0.6; } 50% { opacity: 1; } 100% { opacity: 0.6; } }
 
     footer { text-align: center; font-size: 14px; padding: 40px 0; }
 
@@ -71,7 +49,7 @@
 <body>
   <div class="container" id="container">
     <h1>📰 Actus Tech <span class="cursor"></span></h1>
-    <p class="sub">Scroll infini continu, bannière sticky corrigée et chargement automatique des articles.</p>
+    <p class="sub">Scroll infini continu avec partage natif et images intégrées de chaque flux.</p>
 
     <div class="controls" id="controls">
       <button id="refreshBtn">🔄 Rafraîchir</button>
@@ -106,7 +84,6 @@
     let articlesFlat = [];
     let loadedCount = 0;
     const BATCH_SIZE = 10;
-
     const container = document.getElementById('news-container');
 
     async function getRSS(url) {
@@ -118,27 +95,33 @@
         link: item.link || '#',
         description: (item.content || item.description || '').replace(/<[^>]+>/g, '').trim(),
         date: item.pubDate || '',
-        source: new URL(url).hostname
+        source: new URL(url).hostname,
+        image: (item.enclosure && item.enclosure.link) || null
       }));
     }
 
     async function loadNews() {
       container.innerHTML = '';
       allFeeds = [];
-
       for (const feed of FEEDS) {
-        try {
-          const articles = await getRSS(feed);
-          allFeeds.push({ source: new URL(feed).hostname, articles });
-        } catch {
-          allFeeds.push({ source: new URL(feed).hostname, articles: [] });
-        }
+        try { const articles = await getRSS(feed); allFeeds.push({ source: new URL(feed).hostname, articles }); } catch { allFeeds.push({ source: new URL(feed).hostname, articles: [] }); }
       }
-
       articlesFlat = allFeeds.flatMap(f => f.articles);
       articlesFlat.sort((a,b) => new Date(b.date) - new Date(a.date));
       loadedCount = 0;
       loadMoreArticles();
+    }
+
+    function createShareButton(article) {
+      const btn = document.createElement('button');
+      btn.className = 'share-button';
+      btn.textContent = 'Partager';
+      btn.onclick = async () => {
+        if (navigator.share) {
+          try { await navigator.share({ title: article.title, text: article.description, url: article.link }); } catch(e) { console.log('Partage annulé ou échoué', e); }
+        } else { alert('Partage natif non supporté sur ce navigateur.'); }
+      };
+      return btn;
     }
 
     function loadMoreArticles() {
@@ -146,29 +129,23 @@
       nextBatch.forEach(article => {
         const div = document.createElement('div');
         div.className = 'news';
-        div.innerHTML = `<h2><a href="${article.link}" target="_blank">${article.title}</a></h2><div class="meta">📅 ${article.date} — ${article.source}</div><p>${article.description}</p>`;
+        let imgHTML = article.image ? `<img src="${article.image}" alt="${article.title}">` : '';
+        div.innerHTML = `${imgHTML}<h2><a href="${article.link}" target="_blank">${article.title}</a></h2><div class="meta">📅 ${article.date} — ${article.source}</div><p>${article.description}</p>`;
+        div.appendChild(createShareButton(article));
         container.appendChild(div);
         requestAnimationFrame(() => div.classList.add('visible'));
       });
       loadedCount += nextBatch.length;
 
-      if (loadedCount < articlesFlat.length) {
-        setTimeout(loadMoreArticles, 500);
-      } else {
-        articlesFlat = [...articlesFlat, ...articlesFlat];
-        setTimeout(loadMoreArticles, 500);
-      }
+      if (loadedCount < articlesFlat.length) { setTimeout(loadMoreArticles, 500); }
+      else { articlesFlat = [...articlesFlat, ...articlesFlat]; setTimeout(loadMoreArticles, 500); }
     }
 
     document.getElementById('refreshBtn').addEventListener('click', loadNews);
-
     document.getElementById('filter').addEventListener('change', () => {
       const filter = document.getElementById('filter').value;
-      if (filter === 'all') {
-        articlesFlat = allFeeds.flatMap(f => f.articles);
-      } else {
-        articlesFlat = allFeeds.filter(f => f.source === filter).flatMap(f => f.articles);
-      }
+      if (filter === 'all') { articlesFlat = allFeeds.flatMap(f => f.articles); }
+      else { articlesFlat = allFeeds.filter(f => f.source === filter).flatMap(f => f.articles); }
       articlesFlat.sort((a,b) => new Date(b.date) - new Date(a.date));
       loadedCount = 0;
       container.innerHTML = '';
