Ajout du lien TABATA dans la navigation et réorganisation alphabétique

--- a/index.html
+++ b/index.html
@@ -392,14 +392,15 @@
     </div>
 
     <nav class="navbar">
-        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/todo%20app.html')">TODO</a>
-        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/feedbacks.html')">FEEDBACK</a>
-        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/rss.html')">RSS</a>
-        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/meteo.html')">MÉTÉO</a>
-        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/toolbox.html')">TOOLBOX</a>
-        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/SimpleTabHTML.html')">SIMPLETAB</a>
         <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/dalyview.html')">DAILY</a>
+        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/feedbacks.html')">FEEDBACK</a>
+        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/meteo.html')">MÉTÉO</a>
         <a href="#" onclick="openApp('https://pomofocus.io/')">POMODORO</a>
+        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/rss.html')">RSS</a>
+        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/SimpleTabHTML.html')">SIMPLETAB</a>
+        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/tabata-matrix.html')">TABATA</a>
+        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/todo%20app.html')">TODO</a>
+        <a href="#" onclick="openApp('https://tahlasandale.github.io/MaGazette/toolbox.html')">TOOLBOX</a>
     </nav>
 
     <div class="clock-section">
